# KMITL-ProgrammingFundamentals-GameDev

./: .gitignore  .gitmodules  CMakeLists.txt  attribution.md  notes.md  readme.md  readme_compiling.md
.github/workflows/: ci.yml
assets/sprites/brand/: logo.xcf
figuringitout/: fullscreen.cpp  randmax  randmax.cpp  tempCodeRunnerFile.cpp  tutorial  tutorial.cpp  tutorial_g4g  tutorial_g4g.cpp
figuringitout/BitMaskCollision/: BitMaskCollision.cpp  BitMaskCollision.hpp
figuringitout/StandaloneScore/: StandaloneScore  StandaloneScore.cpp  link  scores.csv
figuringitout/book/: minimalexample  minimalexample.cpp
figuringitout/book/arena/: Arena  Arena.cpp  Arena.hpp  Bullet.cpp  Bullet.hpp  CreateBackground.cpp  CreateHorde.cpp  Pickups.cpp  Pickups.hpp  Player.cpp  Player.hpp  TextureHolder.cpp  TextureHolder.hpp  Zombie.cpp  Zombie.hpp  tempCodeRunnerFile.cpp
figuringitout/book/manage_screens/: main.cpp  screen_0.hpp  screen_1.hpp  screens.hpp
figuringitout/book/pong/: Ball.cpp  Ball.h  Bat.cpp  Bat.h  Pong  Pong.cpp  pong.cpp
figuringitout/book/timber/: tempCodeRunnerFile.cpp  timber  timber.cpp
figuringitout/colorgradient/: ColorScale.cpp  ColorScale.hpp  main  main.cpp
figuringitout/manage_screens/: cScreen.hpp  main
source/: BrainBlast  BrainBlast.cpp  BrainBlast.hpp  CommonEnum.cpp  CommonEnum.hpp  CreateBackground.cpp  FontHolder.cpp  FontHolder.hpp  Game.cpp  Game.hpp  GameOver.cpp  Info.cpp  LevelUp.cpp  Main  Main.cpp  Menu.cpp  Menu.hpp  Paused.cpp  Scene.hpp  SceneChange.hpp  Scenes.hpp  TextureHolder.cpp  TextureHolder.hpp  assets  sfml-app  tempCodeRunnerFile.cpp
source/Bullet/: Bullet.cpp  Bullet.hpp
source/Collision/: Collision.cpp  Collision.hpp
source/Holders/: FontHolder.cpp  MusicHolder.cpp  MusicHolder.hpp  SoundHolder.cpp  SoundHolder.hpp  TextureHolder.cpp
source/PickUps/: PickUps.cpp  PickUps.hpp
source/Player/: Player.cpp  Player.hpp
source/Scenes/: Game.cpp  Game.hpp  GameOver.cpp  GameOver.hpp  How.cpp  How.hpp  Info.cpp  Info.hpp  Leaderboard.cpp  Leaderboard.hpp  LevelUp.cpp  LevelUp.hpp  Menu.cpp  Menu.hpp  Paused.cpp  Paused.hpp  SceneChange.cpp  SceneChange.hpp  Scenes.cpp  Scenes.hpp
source/Scores/: ReadScores.cpp  ReadScores.hpp  SaveScores.cpp  SaveScores.hpp  Score.cpp  Score.hpp  SortScores.cpp  SortScores.hpp
source/Tools/: CreateBackground.cpp  CreateBackground.hpp  GetOS.cpp  GetOS.hpp  GetScreenshot.cpp  GetScreenshot.hpp  OpenURL.cpp  OpenURL.hpp  SetOriginCenter.cpp  SetOriginCenter.hpp  SetRectangleShapeOnMouseHover.cpp  SetRectangleShapeOnMouseHover.hpp
source/Zombie/: Zombie.cpp  Zombie.hpp  ZombieHorde.cpp  ZombieHorde.hpp
